# pytest-only

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  LICENSE.txt  MANIFEST.in  README.rst  _tox_install_command.sh  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
pytest_only/: __init__.py  checker.py  compat.py  plugin.py  version.py
pytest_only/ext/: flake8.py  pylint.py
test/: test_plugin.py
test/ext/: base_lint.py  test_flake8.py  test_pylint.py
