[tool.poetry]
name = 'pytest-only'
version = '1.2.2'
description = 'Use @pytest.mark.only to run a single test'
authors = ['Zach Kanzler <they4kman@gmail.com>']
license = 'MIT'

readme = 'README.rst'

repository = 'https://github.com/theY4Kman/pytest-only'
homepage = 'https://github.com/theY4Kman/pytest-only'

keywords = ['pytest']
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Framework :: Pytest',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Testing',
]

[tool.poetry.dependencies]
python = '>=3.6.2,<4'
pytest = [
    {version = '<7.1', python = '<= 3.6'},
    {version = '>=7.1', python = '^3.7'},
]

[tool.poetry.dev-dependencies]
tox = '^3.25.0'
pylint = "^2.13.9"
pytest-pylint = "^0.18.0"
pytest-common-subject = "^1.0.6"

[tool.poetry.plugins."pytest11"]
only = "pytest_only.plugin"

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
