[tool.poetry]
name = 'pytest-only'
version = "2.1.2"
description = 'Use @pytest.mark.only to run a single test'
authors = ['Zach Kanzler <they4kman@gmail.com>']
license = 'MIT'

readme = 'README.rst'

repository = 'https://github.com/theY4Kman/pytest-only'
homepage = 'https://github.com/theY4Kman/pytest-only'

keywords = ['pytest']
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Framework :: Pytest',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Testing',
]

[tool.poetry.dependencies]
python = '^3.8'
pytest = '>=3.6.0,<9'

[tool.poetry.group.dev.dependencies]
flake8 = [
    {version = '5.0.4', python = '>=3.8,<3.8.1'},
    {version = '^7.0.0', python = '>=3.8.1'},
]
pylint = "^2.13.9"
pytest-common-subject = "^1.0.6"
pytest-pylint = "^0.21.0"
tox = '^3.25.0'

[tool.poetry.plugins."pytest11"]
only = "pytest_only.plugin"

[tool.poetry.plugins.'flake8.extension']
PTO = 'pytest_only.ext.flake8:PytestOnlyMarkChecker'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
